fixed styling throughout on small issues

--- a/app/styles/settings/_variables.scss
+++ b/app/styles/settings/_variables.scss
@@ -10,6 +10,7 @@ $royal-purple: #673285;
 $dolphin-grey: #95a5a6;
 $sky-blue: #7ab5da;
 $error-red: #E74C3C;
+$error-text-red: #EC1600;
 
 $black: #36342D;
 $dark-grey: #4A4A4A;
